2008-07-04  Andreas Kirschbaum

	* Fix crash while drawing the log window.

2008-07-03  Andreas Kirschbaum

	* Make disconnect from server work more reliably.

	* Rewrite server selection screen.

2008-07-01  Andreas Kirschbaum

	* Add "set_forced_active" skin command. It forces the named gui
	element to be always active.

2008-06-28  Andreas Kirschbaum

	* Deactivate command input on ESC key.

2008-06-27  Andreas Kirschbaum

	* Activate command input on ' key.

2008-06-26  Andreas Kirschbaum

	* Accelerate log window updates.

	* Add metaserver2 support; remove metaserver1 support.

	* Remove %A (ip address) format in text fields. Add %A (archbase),
	%E (codebase), and %M (mapbase) formats.

2008-06-25  Andreas Kirschbaum

	* Make DELETE key work in text input fields.

2008-06-20  Andreas Kirschbaum

	* Move default key bindings to .skin files.

	* Unbinding a key reactivates the default key binding.

	* Implement bind -e.

2008-06-15  Andreas Kirschbaum

	* Implement resolution 1600x1600; this allows the maximum view
	size current Crossfire servers support.

2008-06-13  Andreas Kirschbaum

	* Implement command history for all text input fields.

2008-06-12  Andreas Kirschbaum

	* Display resistance values as numbers in protections dialog.

	* Allow key bindings to TAB key.

2008-06-01  Andreas Kirschbaum

	* Fix crash while editing command input.

	* Reset map view when connecting to a server.

2008-05-15  Andreas Kirschbaum

	* Auto-elect the default server entry even if not visible
	initially.

	* Improve tooltips for hp/sp/grace/food/experience gauges.

	* Include item weight and cursed/damned/magic/blessed/unpaid
	information in item tooltips.

	* Replace cursed/damned/magic/blessed markers with icon background
	colors.

	* Highlight magical, blessed, and unpaid items in inventory and
	ground view.

2008-05-14  Andreas Kirschbaum

	* Add support for different icons for cursed and damned items.

	* Accelerate face loading.
