@@ -1,5 +1,7 @@
 2008-07-04  Andreas Kirschbaum
 
+	* Remove meta_element skin command since it is not needed anymore.
+
 	* Fix crash while drawing the log window.
 
 2008-07-03  Andreas Kirschbaum
